2009-12-07  Gyuyoung Kim  <gyuyoung@gmail.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=32024
        [GTK] WebKit does not compile without JAVASCRIPT_DEBUGGER

        Fix build errors when javascript-debugger is disabled on GTK

        * GNUmakefile.am:
2009-12-07  Gyuyoung Kim  <gyuyoung@gmail.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=32024
        [GTK] WebKit does not compile without JAVASCRIPT_DEBUGGER

        Fix build errors when javascript-debugger is disabled on GTK

        * webkit/webkitwebinspector.cpp:
        (webkit_web_inspector_set_property):
        (webkit_web_inspector_get_property):

Canonical link: https://commits.webkit.org/43208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51783 268f45cc-cd09-0410-ab3c-d52691b4dbfc