WebKit/gtk/webkit/webkitwebinspector.cpp
@@ -346,12 +346,16 @@ static void webkit_web_inspector_set_property(GObject* object, guint prop_id, co
 
     switch(prop_id) {
     case PROP_JAVASCRIPT_PROFILING_ENABLED: {
+#if ENABLE(JAVASCRIPT_DEBUGGER)
         bool enabled = g_value_get_boolean(value);
         WebCore::InspectorController* controller = priv->page->inspectorController();
         if (enabled)
             controller->enableProfiler();
         else
             controller->disableProfiler();
+#else
+        g_message("PROP_JAVASCRIPT_PROFILING_ENABLED is not work because of the javascript debugger is disabled\n");
+#endif
         break;
     }
     case PROP_TIMELINE_PROFILING_ENABLED: {
@@ -382,7 +386,11 @@ static void webkit_web_inspector_get_property(GObject* object, guint prop_id, GV
         g_value_set_string(value, priv->inspected_uri);
         break;
     case PROP_JAVASCRIPT_PROFILING_ENABLED:
+#if ENABLE(JAVASCRIPT_DEBUGGER)
         g_value_set_boolean(value, priv->page->inspectorController()->profilerEnabled());
+#else
+        g_message("PROP_JAVASCRIPT_PROFILING_ENABLED is not work because of the javascript debugger is disabled\n");
+#endif
         break;
     case PROP_TIMELINE_PROFILING_ENABLED:
         g_value_set_boolean(value, priv->page->inspectorController()->timelineAgent() != 0);
